# lilygo_h741_espidf

./: .gitignore  CMakeLists.txt  LICENSE  README.md  readme.txt  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/lv_lib_png/: CMakeLists.txt  lv_png.c
main/: CMakeLists.txt  example_qspi_with_ram.c  idf_component.yml  lv_conf.h  main.c  pin_config.h
main/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h
main/ui/images/: ui_img_1_png.c  ui_img_2_png.c  ui_img_3_png.c  ui_img_img_0266_png.c  ui_img_img_0332_png.c  ui_img_img_0639_png.c  ui_img_img_1558_png.c
main/ui/screens/: ui_Screen1.c
squareline/: CMakeLists.txt  SquareLine_Project.sll  SquareLine_Project.spj  filelist.txt  ui.c  ui.h
squareline/images/: ui_img_img_0332_png.c
squareline/screens/: ui_Screen1.c
